syntax = "proto3";

package video_proxy;

service VideoProxyService {
  rpc GetStreamConfig(GetStreamConfigRequest) returns (StreamConfig);
  rpc CreateStreamKey(CreateStreamKeyRequest) returns (StreamKey);
  rpc RegenerateStreamKey(RegenerateStreamKeyRequest) returns (StreamKey);
  rpc AddDestination(AddDestinationRequest) returns (Destination);
  rpc RemoveDestination(RemoveDestinationRequest) returns (RemoveDestinationResponse);
  rpc UpdateDestination(UpdateDestinationRequest) returns (Destination);
  rpc GetStreamStatus(GetStreamStatusRequest) returns (StreamStatus);
  rpc SetForceCut(SetForceCutRequest) returns (SetForceCutResponse);
}

message GetStreamConfigRequest {
  string stream_id = 1;
}

message CreateStreamKeyRequest {
  string stream_id = 1;
}

message RegenerateStreamKeyRequest {
  string stream_id = 1;
  string stream_key_id = 2;
}

message AddDestinationRequest {
  string stream_id = 1;
  string platform = 2;
  string url = 3;
  string name = 4;
}

message RemoveDestinationRequest {
  string stream_id = 1;
  string destination_id = 2;
}

message UpdateDestinationRequest {
  string stream_id = 1;
  string destination_id = 2;
  string name = 3;
  string url = 4;
}

message GetStreamStatusRequest {
  string stream_id = 1;
}

message SetForceCutRequest {
  string stream_id = 1;
  bool force_cut = 2;
}

message SetForceCutResponse {
  bool success = 1;
  string message = 2;
}

message RemoveDestinationResponse {
  bool success = 1;
  string message = 2;
}

message StreamKey {
  string id = 1;
  string stream_id = 2;
  string key = 3;
  int64 created_at = 4;
}

message Destination {
  string id = 1;
  string stream_id = 2;
  string platform = 3;
  string url = 4;
  string name = 5;
  int64 created_at = 6;
}

message StreamConfig {
  string stream_id = 1;
  StreamKey primary_key = 2;
  repeated StreamKey backup_keys = 3;
  repeated Destination destinations = 4;
}

message StreamStatus {
  string stream_id = 1;
  bool is_active = 2;
  int64 connected_at = 3;
  int64 bytes_sent = 4;
  repeated DestinationStatus destinations = 5;
}

message DestinationStatus {
  string destination_id = 1;
  string platform = 2;
  bool connected = 3;
  int64 bytes_sent = 4;
  string last_error = 5;
}
